# agentick

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETION_REPORT.md  DOCUMENTATION_SUMMARY.md  Dockerfile  Dockerfile.vllm  INITIAL_RELEASE_REPORT.md  LICENSE  MEMORY.md  Makefile  PLAN.md  README.md  debug_results.ipynb  make_gallery.py  mkdocs.yml  pyproject.toml  test_all_oracles.py
.github/workflows/: docs.yml  leaderboard.yml  tests.yml
PHASE7_CLAUDE/: PHASE7_CHECKLIST.md
agentick/: __init__.py  coding_api.py
agentick/agents/: README.md  __init__.py  base.py  factory.py  harness.py  observation.py  prompt_templates.py
agentick/analysis/: README.md  __init__.py  comparisons.py  learning_curves.py  metrics.py  statistics.py
agentick/assets/: __init__.py
agentick/benchmark/: README.md  __init__.py  baselines.py  leaderboard.py  metrics.py  profiler.py  suite.py
agentick/core/: README.md  __init__.py  actions.py  annotations.py  entity.py  env.py  feature_extractor.py  grid.py  language.py  renderer.py  simple_grid_renderer.py  sprites.py  types.py
agentick/curriculum/: README.md  __init__.py  adaptive.py  manual.py
agentick/data/: README.md  __init__.py  collector.py  demonstrations.py  formats.py
agentick/experiments/: README.md  __init__.py  _video_utils.py  batched_runner.py  config.py  registry.py  reproduce.py  run.py  runner.py  training_runner.py
agentick/generation/: README.md  __init__.py  difficulty.py  maze.py  room.py  seed.py  validation.py
agentick/human/: README.md  __init__.py  analysis.py  baselines.py  player.py  recorder.py  webapp.py
agentick/interfaces/: __init__.py  bot_interface.py  human_interface.py  llm_interface.py  rl_interface.py  vlm_interface.py
agentick/leaderboard/: README.md  __init__.py  baselines.py  cli.py  comparison.py  cost_tracker.py  database.py  evaluator.py  experiment.py  integrity.py  rankings.py  result.py  scoring.py  seeds.py  submission.py  suites.py
agentick/logging/: README.md  __init__.py  agent_logger.py  browser.py  episode_logger.py  experiment_logger.py  llm_logger.py  replay.py
agentick/oracles/: README.md  __init__.py  adversarial_oracles.py  base.py  combinatorial_oracles.py  compositional_oracles.py  control_oracles.py  exploration_oracles.py  generalization_oracles.py  helpers.py  memory_oracles.py  meta_oracles.py  multi_agent_oracles.py  navigation_oracles.py  planning_oracles.py  reasoning_oracles.py  registry.py  skill_oracles.py
agentick/rendering/: __init__.py  assets.py  entity_mapping.py  iso_math.py  iso_renderer.py  renderer_3d.py  scene.py  tile_atlas.py
agentick/rewards/: README.md  __init__.py  composite.py  intrinsic.py  potential.py
agentick/tasks/: README.md  __init__.py  base.py  configs.py  descriptions.py  registry.py
agentick/training/: README.md  __init__.py  behavior_cloning.py  callbacks.py  logger.py
agentick/utils/: README.md  video.py
agentick/vector/: README.md  __init__.py  vector_env.py
agentick/visualization/: README.md  __init__.py  comparison_plots.py  experiment_plots.py  interactive.py  plots.py  report.py  style.py  tables.py  training_plots.py  video.py
agentick/worldmodel/: __init__.py  change_detection.py  counterfactual.py  evaluator.py  prediction.py  transfer.py
agentick/wrappers/: README.md  __init__.py  atari_preprocessing.py  observation_wrappers.py  recording_wrappers.py  reward_wrappers.py  state_features_wrapper.py
docs/: changelog.md  cli.md  experiments.md  faq.md  index.md  leaderboard.md  results_format.md  seeds.md  tasks.md
docs/agents/: custom_agents.md  finetuning.md  human_agents.md  llm_agents.md  rl_agents.md  vlm_agents.md
docs/api/: index.md
docs/blog/: .authors.yml
docs/concepts/: architecture.md  observations.md  rewards.md  scoring.md  tasks.md  worldmodel.md
docs/experiments/: analysis.md  reproducibility.md  running.md  visualization.md
docs/extending/: custom_renderers.md  custom_rewards.md  custom_tasks.md
docs/getting_started/: first_experiment.md  installation.md  quickstart.md
docs/leaderboard/: adapters.md  overview.md  submitting.md  suites.md
docs/showcase/: index.html  task_descriptions.json
examples/: README.md  curriculum_training.py  custom_task.py  human_play.py  llm_agent.py  programmatic_bot.py  random_agent.py  rl_training.py  run_benchmark.py  vlm_agent.py
examples/advanced/: README.md  custom_reward.py  custom_task.py  human_play.py  parallel_eval.py
examples/basics/: 01_make_and_step.py  02_render_modes.py  03_reward_modes.py  04_list_tasks.py  05_difficulty_levels.py  README.md
examples/data_and_finetuning/: README.md  _utils.py  behavior_cloning_training.py  collect_oracle_trajectories.py  collect_random_trajectories.py  collect_trajectories_finetune.py  export_to_huggingface.py  merge_and_push.py  record_videos.py  run_sft_from_config.sh  sft_with_trl.py  tinker_rl_training.py  tinker_sft_training.py
examples/debug/: _shared.py  llm_debugging.py  vlm_debugging.py
examples/experiments/: README.md  compare_experiments.py  generate_paper_figures.py  generate_plots.py  plot.ipynb  run_custom.py  run_predefined.py  run_single_benchmark.py  train_and_eval_ppo.py
examples/finetune/: collect_trajectories.py
examples/leaderboard/: README.md  compare_agents.py  create_submission.py  run_evaluation.py  validate_submission.py  view_results.py
examples/llm/: README.md  anthropic_text_agent.py  anthropic_vision_agent.py  base_llm_agent.py  compare_llms.py  huggingface_local_agent.py  openai_agent.py  openai_cot_agent.py  (+2 more)
leaderboard_data/: entries.json
scripts/: audit_docs.py  deploy_leaderboard.sh  generate_datasets.sh  generate_paper_figures.py  generate_task_descriptions.py  make_gallery.py  measure_max_sft_seq_len.py  populate_leaderboard.py  profile_step.py  publish_results.py  publish_to_leaderboard.py  record_oracle_gallery.py  run_baselines.sh  smoke_test_merge.sh  smoke_test_sft.sh  test_all_oracles.py  validate_submission.py
showcase/: index.html  task_descriptions.json
tests/: conftest.py
(+448 files in other folders)
