[project]
name = "agentick"
version = "0.1.0"
description = "Universal benchmark for evaluating generally capable AI agents across all paradigms"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Agentick Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=1.0",
    "numpy>=1.24",
    "pygame>=2.5",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "scipy>=1.17.0",
    "python-dotenv>=1.0",
    "transformers>=4.57.6",
    "accelerate>=1.12.0",
    "flask>=3.1.3",
    "opencv-python>=4.13.0.92",
    "matplotlib>=3.10.8",
    "datasets>=2.14.4",
    "torch-c-dlpack-ext>=0.1.5",
]

[project.scripts]
agentick = "agentick.leaderboard.cli:main"

[project.optional-dependencies]
# Core RL training
rl = [
    "stable-baselines3>=2.0",
    "tensorboard",
    "moviepy",
    "torch>=2.0",
    "imageio[ffmpeg]",
]
# LLM/VLM agents
llm = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.8",
    "transformers>=4.40",
    "torch>=2.0",
    "accelerate",
    "Pillow",
]
# Experiment tracking
tracking = [
    "wandb",
]
# Visualization & plotting
viz = [
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "plotly>=6.5.2",
    "imageio-ffmpeg>=0.6.0",
]
# Documentation
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
]
# Leaderboard
leaderboard = [
    "jinja2",
    "docker",
]
# Fine-tuning
finetune = [
    "trl>=0.8",
    "datasets",
    "peft",
]
# Jupyter notebooks
notebooks = [
    "jupyter",
    "ipywidgets",
]
# Fast local inference with vLLM
vllm = [
    "vllm>=0.6.0",
]
# Everything
all = [
    "agentick[rl,llm,tracking,viz,docs,leaderboard,finetune,notebooks,vllm]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentick"]

[tool.hatch.build.targets.wheel.force-include]
"agentick/rendering/tiles" = "agentick/rendering/tiles"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 60

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"examples/debug/_shared.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]
